--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       CYPRESS_baseUrl: http://192.168.56.135:8002   # 根据你的环境改
 
